# bh-molecule

./: .gitignore  404.html  README.md  generate_physics_docs.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy-docs.yml
api/constants/: index.html
api/fit/: index.html
api/physics/: index.html
api/vis133m/: index.html
cli_commands/: index.html
dev-install-guide/: index.html
docs/: README.md  cli_commands.md  dev-install-guide.md  docshowto.md  generate_physics_docs.py  index.md  phys.md  physics.md  venv-outside-synced-folders.md
docs/api/: constants.md  fit.md  physics.md  vis133m.md
docs/examples/: 02_quickstart.ipynb  02_quickstart.md  03_load_spectral_data.ipynb  03_load_spectral_data.md  04_bh_fit.ipynb  04_bh_fit.md
docs/styles/: brand.css
docs/stylesheets/: jupyter.css
docshowto/: index.html
examples/: 01_quickstart.py  02_quickstart.ipynb  03_load_spectral_data.ipynb  04_bh_fit.ipynb  BH_spectrum.ipynb  analysis_133m_f38_ch31.ipynb  bh_refactor.py  bh_spectrum.py  loaddata.ipynb  runit.ipynb
examples/02_quickstart/: 02_quickstart.ipynb  index.html
examples/03_load_spectral_data/: 03_load_spectral_data.ipynb  index.html
examples/04_bh_fit/: index.html
javascripts/: mathjax.js
phys/: index.html
physics/: index.html
search/: search_index.json
site/: 404.html
site/physics/: index.html
src/bh_molecule/: __init__.py  cli.py  constants.py  dataio.py  fit.py  physics.py
src/bh_spectra/: __init__.py  cli.py  constants.py  dataio.py  fit.py  physics.py
styles/: brand.css
tests/: test_physics.py  test_regression_original.py
tools/: nbconvert_simple.py
typings/astropy/: __init__.py
venv-outside-synced-folders/: index.html
(+9 files in other folders)
