[project]
name = "bh-molecule"
version = "0.1.0"
description = "BH (boron hydride) A–X band spectrum model and fitting tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arseniy Kuzmin" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "astropy>=6.0",
  "plotly>=5.0",
  "nbformat>=5.10"
]

[project.optional-dependencies]
dev = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
  "pymdown-extensions>=10.0",
  "ipykernel>=6.0",
  "mdx_truly_sane_lists>=1.0",
  "mkdocstrings[python]>=0.25",
  "griffe>=0.45"  
]

[tool.setuptools.package-data]
"bh_molecule._resources" = ["*.csv"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
bh-spectra = "bh_molecule.cli:main"
bh-spectra-csv = "bh_molecule.cli:main_csv"
bh-spectra-plot = "bh_molecule.cli:main_plot"
